--- a/Licenta/Licenta/ViewControllers/DARLogInViewController.xib
+++ b/Licenta/Licenta/ViewControllers/DARLogInViewController.xib
@@ -10,9 +10,11 @@
                 <outlet property="logo" destination="Nsm-LH-pDY" id="Rpm-Ek-i1A"/>
                 <outlet property="showSignInButton" destination="q1L-YU-7zo" id="Swz-fg-Yrn"/>
                 <outlet property="showSignUpButton" destination="m9v-7G-pj3" id="Kfx-0x-Xqd"/>
+                <outlet property="signInAlertLabel" destination="2bC-YT-9Ip" id="b9Z-eJ-53b"/>
                 <outlet property="signInEmailTextField" destination="hpb-Ua-Xmr" id="MN5-J7-BpU"/>
                 <outlet property="signInPasswordTextField" destination="G3x-c5-5sQ" id="bMe-iX-f0Q"/>
                 <outlet property="signInView" destination="NvC-nm-UNQ" id="7bu-eS-eP9"/>
+                <outlet property="signUpAlertLabel" destination="XBZ-1j-Vo2" id="nj6-UT-a56"/>
                 <outlet property="signUpEmailTextField" destination="200-H4-6gR" id="jQl-vZ-JkF"/>
                 <outlet property="signUpNameTextField" destination="SVx-Er-iNo" id="OKC-HV-q2q"/>
                 <outlet property="signUpPasswordTextField" destination="w0T-GJ-ry0" id="p2g-R1-evX"/>
@@ -118,6 +120,13 @@
                             <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="17"/>
                             <textInputTraits key="textInputTraits"/>
                         </textField>
+                        <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2bC-YT-9Ip">
+                            <rect key="frame" x="20" y="241" width="240" height="21"/>
+                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                            <color key="textColor" red="1" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                            <nil key="highlightedColor"/>
+                        </label>
                     </subviews>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                 </view>
@@ -188,6 +197,13 @@
                                 <action selector="doSignUp:" destination="-1" eventType="touchUpInside" id="HX1-9y-L54"/>
                             </connections>
                         </button>
+                        <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="XBZ-1j-Vo2">
+                            <rect key="frame" x="20" y="241" width="240" height="21"/>
+                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                            <color key="textColor" red="1" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                            <nil key="highlightedColor"/>
+                        </label>
                     </subviews>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                 </view>
