--- a/Licenta/Licenta/ViewControllers/DARMainViewController.xib
+++ b/Licenta/Licenta/ViewControllers/DARMainViewController.xib
@@ -8,7 +8,9 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="DARMainViewController">
             <connections>
                 <outlet property="homeLabel" destination="8r3-tA-P9c" id="xoT-Kf-ZTF"/>
+                <outlet property="homeView" destination="vVo-XY-OlO" id="Rje-78-uXt"/>
                 <outlet property="restaurantLabel" destination="F7F-Wa-AKt" id="zWi-6o-6qm"/>
+                <outlet property="restaurantView" destination="jxu-Op-b7e" id="arI-WT-ST0"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
                 <outlet property="welcomeLabel" destination="idO-2s-VBj" id="Yjr-9I-q3M"/>
             </connections>
@@ -41,15 +43,15 @@
                             <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                             <nil key="highlightedColor"/>
                         </label>
-                        <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Welcome!" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="idO-2s-VBj">
-                            <rect key="frame" x="20" y="103" width="280" height="94"/>
-                            <fontDescription key="fontDescription" type="system" pointSize="50"/>
-                            <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                            <nil key="highlightedColor"/>
-                        </label>
                     </subviews>
                     <color key="backgroundColor" red="0.11372549019607843" green="0.792156862745098" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                 </view>
+                <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Welcome!" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="idO-2s-VBj">
+                    <rect key="frame" x="20" y="103" width="280" height="94"/>
+                    <fontDescription key="fontDescription" type="system" pointSize="50"/>
+                    <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    <nil key="highlightedColor"/>
+                </label>
                 <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="8Tl-WQ-A3Y">
                     <rect key="frame" x="0.0" y="498" width="320" height="50"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
